test/parse/assert/assertinvalid.txt
;;; FLAGS: --spec
(assert_invalid
  (module
    (func
      (drop (i32.const 1)))
    (export "foo" 1))
  "unknown function 1") ;; string is ignored
(assert_invalid
  (module
    (func (result i32)
      (nop)))
  "type mismatch")
(;; STDOUT ;;;
assert_invalid error:
  parse/assert/assertinvalid.txt:6:19: function variable out of range (max 1)
    (export "foo" 1))
                  ^
assert_invalid error:
  parse/assert/assertinvalid.txt:10:6: type mismatch at function result. got void, expected i32
    (func (result i32)
     ^^^^
;;; STDOUT ;;)
